# Meta-Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  environment.py  grader.py  inference.py  lock_err.txt  models.py  openenv.yaml  out.txt  push_log.txt  push_log_utf8.txt  pyproject.toml  remotes.txt  requirements.txt  submission.json  tasks.py  test_app.py  test_environment.py  verify_submission.py
server/: app.py
