[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging-station-optimization"
version = "1.0.0"
description = "AI agent learns to optimize EV charging station selection based on distance, cost, and availability"
authors = [
    { name = "OpenEnv Environment Team" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/contact-daniel-me/Meta-Hackathon"

[tool.setuptools]
py-modules = ["environment", "models", "tasks", "grader", "inference", "app"]
